2000-06-05  Darin Adler  <darin@eazel.com>

	* libgnomevfs/gnome-vfs-mime-handlers.c:
	(gnome_vfs_mime_get_default_component),
	(gnome_vfs_mime_get_short_list_applications),
	(gnome_vfs_mime_get_short_list_components),
	(gnome_vfs_mime_get_all_applications),
	(gnome_vfs_mime_get_all_components),
	(gnome_vfs_mime_set_default_action_type),
	(gnome_vfs_mime_set_default_application),
	(gnome_vfs_mime_set_default_component),
	(gnome_vfs_mime_set_short_list_applications),
	(gnome_vfs_mime_set_short_list_components),
	(id_list_from_component_list),
	(gnome_vfs_mime_add_application_to_short_list),
	(gnome_vfs_mime_remove_application_from_short_list),
	(gnome_vfs_mime_add_component_to_short_list),
	(gnome_vfs_mime_remove_component_from_short_list),
	(gnome_vfs_mime_extend_all_applications),
	(gnome_vfs_mime_remove_from_all_applications),
	(gnome_vfs_mime_define_application), (gnome_vfs_mime_action_free),
	(gnome_vfs_mime_application_list_free),
	(gnome_vfs_mime_component_list_free), (str_to_bool), (bool_to_str),
	(join_str_list):
	Added free calls to get rid of many storage leaks.
	Added more FIXMEs.
	Replaced lots of use of \' with just plain '.
	Replaced retval with variable names that are words in many places.
	Other reformatting and tweaking.

2000-06-05  Ramiro Estrugo  <ramiro@eazel.com>

	* data/mime/gnome-vfs.keys:

2000-06-04  Ian McKellar  <yakk@yakk.net>

	* modules/newftp-method.c: (read_response_line),
	(ftp_connection_aquire), (do_open), (internal_get_file_info),
	(do_open_directory), (do_make_directory), (do_remove_directory),
	(do_move), (do_unlink):
	Fixed this lots. It should now fail gracefully if it can't connect or
	log into a server, and it should reconnect if a connection times out.

2000-06-02  John Sullivan  <sullivan@eazel.com>

	* libgnomevfs/gnome-vfs-mime-handlers.c:
	(gnome_vfs_mime_add_application_to_short_list),
	(gnome_vfs_mime_remove_application_from_short_list),
	(gnome_vfs_mime_add_component_to_short_list),